Eliminate full-height fixed bg scroll weirdness on mobile
See comment in SCSS for explanation.

--- a/_sass/base/_elements.scss
+++ b/_sass/base/_elements.scss
@@ -32,17 +32,28 @@ body {
     position: fixed;
 
     width: 100%;
-    height: 100%;
+    height: 100vh;
 
     content: '';
 
     background: linear-gradient(
-      to bottom right,
-      rgba(195,172,11,.4),
-      rgba(15,78,126,.4)
+    to bottom right,
+    rgba(195,172,11,.4),
+    rgba(15,78,126,.4)
     ),
     url('../assets/images/hero-one.jpg') center center no-repeat;
     background-size: cover;
+
+    // Mobile devices get weird with fixed full-height bg's during scroll
+    // since the viewport resizes due to the address bar hiding/showing.
+    // Ideally we would use modernizr and check if touch is enabled, but this
+    // is a cheap fix for now.
+    @media (max-height: 600px) {
+      height: 600px;
+    }
+    @media (min-height: 601px) {
+      height: 1024px;
+    }
   }
 }
 
